--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/meting@2/dist/Meting.min.js"> -->
     <!-- </script> -->
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Human-Numb</title>
     <!-- <link rel="stylesheet" href="https://unpkg.com/browse/element-ui@2.15.10/lib/theme-chalk/index.css"> -->
     
   </head>
